--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>A Fez Odyssey</title>
+        <title>Bussiere Blog</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="./theme/css/main.css" type="text/css" />
-                <link href="http://bussiere.github.com/fez_odissey/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Fez Odyssey Atom Feed" />
+                <link href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
                 
         <!--[if IE]>
                 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href=".">A Fez Odyssey </a></h1>
+                <h1><a href=".">Bussiere Blog </a></h1>
                 <nav><ul>
                                                                                                 </ul></nav>
         </header><!-- /#banner -->
@@ -41,7 +41,7 @@
                                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://bussiere.github.com/fez_odissey/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
                                                     <li><a href="#">You can add links in your config file</a></li>
                                                     <li><a href="#">Another social link</a></li>
