--- a/archives.html
+++ b/archives.html
@@ -22,12 +22,17 @@
         <header id="banner" class="body">
                 <h1><a href=".">A Fez Odyssey </a></h1>
                 <nav><ul>
-                                                                                                </ul></nav>
+                                                                                                    <li ><a href="./category/blog.html">Blog</a></li>
+                                </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
 <h1>Archives for A Fez Odyssey</h1>
 
 <dl>
+    <dt>lun. 20 fÚvrier 2012</dt>
+    <dd><a href="./bonjour.html">Bonjour</a></dd>
+    <dt>lun. 20 fÚvrier 2012</dt>
+    <dd><a href="./hello-world.html">Hello world</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
