--- a/categories.html
+++ b/categories.html
@@ -22,9 +22,11 @@
         <header id="banner" class="body">
                 <h1><a href=".">A Fez Odyssey </a></h1>
                 <nav><ul>
-                                                                                                </ul></nav>
+                                                                                                    <li ><a href="./category/blog.html">Blog</a></li>
+                                </ul></nav>
         </header><!-- /#banner -->
         <ul>
+    <li><a href="./category/blog.html">Blog</a></li>
 </ul>
         <section id="extras" class="body">
                         <div class="blogroll">
