--- a/archives.html
+++ b/archives.html
@@ -29,10 +29,10 @@
 <h1>Archives for A Fez Odyssey</h1>
 
 <dl>
-    <dt>lun. 20 fÚvrier 2012</dt>
-    <dd><a href="./bonjour.html">Bonjour</a></dd>
-    <dt>lun. 20 fÚvrier 2012</dt>
-    <dd><a href="./hello-world.html">Hello world</a></dd>
+    <dt>mar. 27 novembre 2012</dt>
+    <dd><a href="./jour-un.html">Jour un</a></dd>
+    <dt>lun. 26 novembre 2012</dt>
+    <dd><a href="./readme.html">Readme</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -42,7 +42,6 @@
                                                     <li><a href="http://docs.notmyidea.org/alexis/pelican/">Pelican</a></li>
                                                     <li><a href="http://python.org">Python.org</a></li>
                                                     <li><a href="http://jinja.pocoo.org">Jinja2</a></li>
-                                                    <li><a href="#">You can modify those links in your config file</a></li>
                                                 </ul>
                 </div><!-- /.blogroll -->
                                 <div class="social">
@@ -50,8 +49,8 @@
                         <ul>
                             <li><a href="http://bussiere.github.com/fez_odissey/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
-                                                    <li><a href="#">You can add links in your config file</a></li>
-                                                    <li><a href="#">Another social link</a></li>
+                                                    <li><a href="https://github.com/bussiere">Bussiere</a></li>
+                                                    <li><a href="#">Camille</a></li>
                                                 </ul>
                 </div><!-- /.social -->
                 </section><!-- /#extras -->
