--- a/categories.html
+++ b/categories.html
@@ -35,7 +35,6 @@
                                                     <li><a href="http://docs.notmyidea.org/alexis/pelican/">Pelican</a></li>
                                                     <li><a href="http://python.org">Python.org</a></li>
                                                     <li><a href="http://jinja.pocoo.org">Jinja2</a></li>
-                                                    <li><a href="#">You can modify those links in your config file</a></li>
                                                 </ul>
                 </div><!-- /.blogroll -->
                                 <div class="social">
@@ -43,8 +42,8 @@
                         <ul>
                             <li><a href="http://bussiere.github.com/fez_odissey/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
-                                                    <li><a href="#">You can add links in your config file</a></li>
-                                                    <li><a href="#">Another social link</a></li>
+                                                    <li><a href="https://github.com/bussiere">Bussiere</a></li>
+                                                    <li><a href="#">Camille</a></li>
                                                 </ul>
                 </div><!-- /.social -->
                 </section><!-- /#extras -->
