--- a/readme.html
+++ b/readme.html
@@ -61,8 +61,8 @@
 
 
 </footer><!-- /.post-info -->
-      <p>Ce blog a pour vocation de parler de python, de trucs geeks et divers ou curieux, et de femmes.
-<a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_00.jpg" title="Grande Version"><img alt="Vampirette" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_00_thumb.jpg" /></a> </p>
+      <p>Ce blog a pour vocation de parler de python, de trucs geeks et divers ou curieux, et de femmes.</p>
+<p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_00.jpg" title="Grande Version"><img alt="Vampirette" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_00_thumb.jpg" /></a> </p>
     </div><!-- /.entry-content -->
     
 
