--- a/j-1.html
+++ b/j-1.html
@@ -63,9 +63,9 @@
 </footer><!-- /.post-info -->
       <p>Donc oui J-1, avant de devenir vieux.
 Cela pose quand meme pas mal de questions.
-Notamment quand beaucoup de choses changent autour de vous.
-Je continue de penser que l'on a en partie l'age des gens que l'on frequente et des miss que l'on frequente.</p>
-<p>[<img alt="Asuka Swimsuit" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_asuka_swimsuit_thumb.jpg" />] [2] </p>
+Notamment quand beaucoup de choses changent autour de vous.</p>
+<p>Je continue de penser que l'on a en partie l'age des gens que l'on frequente et des miss que l'on frequente.</p>
+<p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/asuka_swimsuit.jpg" title="Grande Version"><img alt="Asuka Swimsuit" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/asuka_swimsuit_thumb.jpg" /></a> </p>
     </div><!-- /.entry-content -->
     
 
