--- a/categories.html
+++ b/categories.html
@@ -23,11 +23,13 @@
                 <h1><a href=".">Bussiere Blog </a></h1>
                 <nav><ul>
                                                                                                     <li ><a href="./category/blog.html">Blog</a></li>
+                                    <li ><a href="./category/geek.html">Geek</a></li>
                                     <li ><a href="./category/jeux.html">Jeux</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <ul>
     <li><a href="./category/blog.html">Blog</a></li>
+    <li><a href="./category/geek.html">Geek</a></li>
     <li><a href="./category/jeux.html">Jeux</a></li>
 </ul>
         <section id="extras" class="body">
