--- a/archives.html
+++ b/archives.html
@@ -23,6 +23,7 @@
                 <h1><a href=".">Bussiere Blog </a></h1>
                 <nav><ul>
                                                                                                     <li ><a href="./category/blog.html">Blog</a></li>
+                                    <li ><a href="./category/geek.html">Geek</a></li>
                                     <li ><a href="./category/jeux.html">Jeux</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
@@ -30,6 +31,8 @@
 <h1>Archives for Bussiere Blog</h1>
 
 <dl>
+    <dt>ven. 07 dÚcembre 2012</dt>
+    <dd><a href="./le-bitcoin-pour-les-nuls.html">Le bitcoin pour les nuls</a></dd>
     <dt>mar. 04 dÚcembre 2012</dt>
     <dd><a href="./planescapetorment.html">PlaneScapeTorment</a></dd>
     <dt>lun. 03 dÚcembre 2012</dt>
