--- a/j-1.html
+++ b/j-1.html
@@ -23,6 +23,7 @@
                 <h1><a href=".">Bussiere Blog </a></h1>
                 <nav><ul>
                                                                                                     <li class="active"><a href="./category/blog.html">Blog</a></li>
+                                    <li ><a href="./category/geek.html">Geek</a></li>
                                     <li ><a href="./category/jeux.html">Jeux</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
