--- a/le-bitcoin-pour-les-nuls.html
+++ b/le-bitcoin-pour-les-nuls.html
@@ -46,7 +46,7 @@
         </address>
         <p>In <a href="./category/geek.html">Geek</a>. </p>
 <p>tags: <a href="./tag/bitcoin.html">bitcoin</a><a href="./tag/crypto.html">crypto</a><a href="./tag/monnaie.html">monnaie</a><a href="./tag/economie.html">economie</a><a href="./tag/libertarian.html">libertarian</a><a href="./tag/cypherpunk.html">cypherpunk</a></p>
-</footer><!-- /.post-info -->      <p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/" title="MoneyMoney it's the richman's world"><img alt="MoneyMoney it's the richman's world" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/Bitcoin_thumb.jpg" /></a></p>
+</footer><!-- /.post-info -->      <p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/Bitcoin.jpg" title="MoneyMoney it's the richman's world"><img alt="MoneyMoney it's the richman's world" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/Bitcoin_thumb.jpg" /></a></p>
 <p>Pour faire un commentaire, inscrivez vous sur github et faite un fork / pull que je validerai.</p>
     </div><!-- /.entry-content -->
     
