--- a/le-bitcoin-pour-les-nuls.html
+++ b/le-bitcoin-pour-les-nuls.html
@@ -47,19 +47,19 @@
         <p>In <a href="./category/geek.html">Geek</a>. </p>
 <p>tags: <a href="./tag/bitcoin.html">bitcoin</a><a href="./tag/crypto.html">crypto</a><a href="./tag/monnaie.html">monnaie</a><a href="./tag/economie.html">economie</a><a href="./tag/libertarian.html">libertarian</a><a href="./tag/cypherpunk.html">cypherpunk</a></p>
 </footer><!-- /.post-info -->      <p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/Bitcoin.jpg" title="MoneyMoney it's the richman's world"><img alt="MoneyMoney it's the richman's world" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/Bitcoin_thumb.jpg" /></a></p>
-<p>Hier au [dernier bar][1], j'ai demandé au patron si il allait accepter un jour le paiement en [bitcoin][1].
-Et une [connaissance][2] qui etait la ne connaissait pas non plus les bitcoin, du coup j'ai du expliquer vite fait ce qu'etait les [bitcoin][3].</p>
-<p>Aujourd'hui je tombe sur cet <a href="https://bitcointalk.org/index.php?topic=129461.0" title="\o/">article</a> (en gros un [site][5] d'echange de bitcoin a passé un accord avec des banques dont le credit mutuel pour avoir un [statut de banque][6]).</p>
-<p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/cypherpunk.jpg" title="La crypto c'est rigolo"><img alt="La crypto c'est rigolo" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/cypherpunk_thumb.jpg" /></a>
-Donc qu'est ce que le bitcoin et pourquoi cela satisfait le vieux [libertarien][7] [anarchiste capitaliste][8] [individuel][9] <a href="http://fr.wikipedia.org/wiki/Audrey_Tang" title="La voie de l'hermaphrodite">hacker</a> [cypherpunk][11] et fan de [cyberpunk][12] que je suis :</p>
-<p>Je vais donc tenter de vulgariser l'[article de wikipedia][13] :</p>
+<p>Hier au <a href="http://www.dernierbar.com/" title="Des vrais">dernier bar</a>, j'ai demandé au patron si il allait accepter un jour le paiement en <a href="http://www.dernierbar.com/" title="Des vrais">bitcoin</a>.
+Et une <a href="http://anadore.fr/" title="Des purs aussi">connaissance</a> qui etait la ne connaissait pas non plus les bitcoin, du coup j'ai du expliquer vite fait ce qu'etait les <a href="http://fr.wikipedia.org/wiki/Bitcoin" title="Chaud a comprendre">bitcoin</a>.</p>
+<p>Aujourd'hui je tombe sur cet <a href="https://bitcointalk.org/index.php?topic=129461.0" title="\o/">article</a> (en gros un <a href="https://fr.bitcoin-central.net/" title="Un site d'echange de bitcoin">site</a> d'echange de bitcoin a passé un accord avec des banques dont le credit mutuel pour avoir un <a href="http://fr.wikipedia.org/wiki/Licence_bancaire" title="La license bancaire">statut de banque</a>).</p>
+<p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/cypherpunk.jpg" title="La crypto c'est rigolo"><img alt="La crypto c'est rigolo" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/cypherpunk_thumb.jpg" /></a></p>
+<p>Donc qu'est ce que le bitcoin et pourquoi cela satisfait le vieux <a href="http://en.wikipedia.org/wiki/Libertarianism" title="I did it my waaay">libertarien</a> <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism" title="Money makes the world goes round">anarchiste capitaliste</a> <a href="http://fr.wikipedia.org/wiki/Audrey_Tang" title="La voie de l'hermaphrodite">individuel</a> <a href="http://en.wikipedia.org/wiki/Kevin_Mitnick" title="Un vieux de la veille">hacker</a> <a href="http://en.wikipedia.org/wiki/Cypherpunk" title="Alice et bob ils ont baisés ou pas ?">cypherpunk</a> et fan de <a href="http://en.wikipedia.org/wiki/William_Gibson" title="Le pere">cyberpunk</a> que je suis :</p>
+<p>Je vais donc tenter de vulgariser l'<a href="http://fr.wikipedia.org/wiki/Bitcoin" title="Chaud">article de wikipedia</a> :</p>
 <p>Le bitcoin est donc une [crypto monnaie][14] [P2P][15] sans etats ni banques [centralisateur][16] derriere.
 En gros, l'on peut acheter des bitcoins ou en créer en faisant tourner des [calculs de cryptographies asymetriques][17] servant a valider le systeme.
 La validation des transactions de bitcoin par calculs cryptographiques en pretant de son temps machine, entraine en recompense la creation de bitcoin pour le preteur de machine.
 Sachant que ces validations sont prevues pour etre de plus en plus dur a effectuer et que la masse monetaire des bitcoins est prevus pour etre [finit][18].
 En encore plus gros : Les bitcoins sont une monnaie decentralisée, n'appartenant a personne, ne dependant d'aucune structure et anonyme.</p>
-<p>Et pourquoi c'est [bien][18] ? :
-<a href="http://en.wikipedia.org/wiki/Individualist_anarchism" title="F00l"><img alt="A" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/200px-Mutualismo_thumb.jpg" /></a></p>
+<p>Et pourquoi c'est [bien][18] ? :</p>
+<p><a href="http://en.wikipedia.org/wiki/Individualist_anarchism" title="F00l"><img alt="A" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/200px-Mutualismo_thumb.jpg" /></a></p>
 <p>Trainant de temps en temps dans l'[industrie][19] du [sexe][20], j'ai souvent éte confronté a une certaine hypocrisie.</p>
 <p>Entre paypal qui peut vous fermer votre compte [unilateralement][21] et [bloquer][22] votre argent et vous faire attendre [X mois][23].
 Les banques qui peuvent vous virer parce que votre commerce [ne leur plait pas][24] du jour au lendemain.</p>
@@ -73,6 +73,7 @@ Apres il faut savoir que l'emission de monnaie est un des pouvoirs [regaliens][3
 ceux ci sont tres [chatouilleux][35] sur la question (il suffit de voir les [peines des faux monnayeurs][36]).
 La monnaie etant un bon moyen de controler les citoyens d'un etat et d'imposer un ordre social (voire une [pseudo morale][37] contre un controle de l'argent).
 Une monnaie sans etat ni structure centrale ne peut etre qu'a mon gout une bonne monnaie.</p>
+<p>Cet article n'engage que moi et j'espere qu'il est juste.</p>
 <p>Pour faire un commentaire, inscrivez vous sur github et faite un fork / pull que je validerai.</p>
     </div><!-- /.entry-content -->
     
