--- a/Ophelia.html
+++ b/Ophelia.html
@@ -44,7 +44,9 @@
     Ophelia :<br>
     <div id="chart1" style="width: 600px; height: 600px;"> </div>
     <div id="legendTwo"></div>
-
+"Jolie":7,"Stable":4,"Interessante":8<br>
+Ratio : (7 + 4 + 8) / 3 = 6,33333333 <br>
+% De perfection 6,33333333/(10/100) = 63.33 %<br>
     
 </body>
 </html>
