--- a/archives.html
+++ b/archives.html
@@ -32,7 +32,7 @@
 
 <dl>
     <dt>ven. 07 dÚcembre 2012</dt>
-    <dd><a href="./le-bitcoin-pour-les-nuls.html">Le bitcoin pour les nuls</a></dd>
+    <dd><a href="./le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html">Le bitcoin pour les nuls (Mise a jour le 13 decembre)</a></dd>
     <dt>mar. 04 dÚcembre 2012</dt>
     <dd><a href="./planescapetorment.html">PlaneScapeTorment</a></dd>
     <dt>lun. 03 dÚcembre 2012</dt>
