--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ https://docs.djangoproject.com/en/dev/topics/db/queries/</p>                </ar
         </address>
         <p>In <a href="./category/blog.html">Blog</a>. </p>
 <p>tags: <a href="./tag/resister.html">Resister</a><a href="./tag/creation.html">Creation</a><a href="./tag/resistance.html">Resistance</a></p>
-</footer><!-- /.post-info -->                <p>"Résister, c'est créer"  [Miguel-Benasayag]</p>
+</footer><!-- /.post-info -->                <p>"Résister, c'est créer"  <a href="http://fr.wikipedia.org/wiki/Miguel_Benasayag" title="Personne Interessante">Miguel-Benasayag</a></p>
                 <a class="readmore" href="./resister.html">read more</a>
                                 </div><!-- /.entry-content -->
             </article></li>
