--- a/resister.html
+++ b/resister.html
@@ -46,7 +46,7 @@
         </address>
         <p>In <a href="./category/blog.html">Blog</a>. </p>
 <p>tags: <a href="./tag/resister.html">Resister</a><a href="./tag/creation.html">Creation</a><a href="./tag/resistance.html">Resistance</a></p>
-</footer><!-- /.post-info -->      <p>"Résister, c'est créer"  [Miguel-Benasayag]</p>
+</footer><!-- /.post-info -->      <p>"Résister, c'est créer"  <a href="http://fr.wikipedia.org/wiki/Miguel_Benasayag" title="Personne Interessante">Miguel-Benasayag</a></p>
     </div><!-- /.entry-content -->
     
   </article>
