--- a/archives.html
+++ b/archives.html
@@ -25,12 +25,15 @@
                                                                                                     <li ><a href="./category/blog.html">Blog</a></li>
                                     <li ><a href="./category/geek.html">Geek</a></li>
                                     <li ><a href="./category/jeux.html">Jeux</a></li>
+                                    <li ><a href="./category/perso.html">Perso</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
 <h1>Archives for Bussiere Blog</h1>
 
 <dl>
+    <dt>ven. 28 dÚcembre 2012</dt>
+    <dd><a href="./petite-puterie-en-java.html">Petite Puterie en java</a></dd>
     <dt>mer. 19 dÚcembre 2012</dt>
     <dd><a href="./les-query-en-django.html">Les Query en django</a></dd>
     <dt>mer. 19 dÚcembre 2012</dt>
@@ -41,6 +44,10 @@
     <dd><a href="./le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html">Le bitcoin pour les nuls (Mise a jour le 13 decembre)</a></dd>
     <dt>mar. 04 dÚcembre 2012</dt>
     <dd><a href="./planescapetorment.html">PlaneScapeTorment</a></dd>
+    <dt>lun. 03 dÚcembre 2012</dt>
+    <dd><a href="./competence.html">Competence</a></dd>
+    <dt>lun. 03 dÚcembre 2012</dt>
+    <dd><a href="./different-event-pour-lannee.html">Different Event pour l'annee</a></dd>
     <dt>lun. 03 dÚcembre 2012</dt>
     <dd><a href="./j-1.html">J-1</a></dd>
     <dt>lun. 26 novembre 2012</dt>
