--- a/categories.html
+++ b/categories.html
@@ -25,12 +25,14 @@
                                                                                                     <li ><a href="./category/blog.html">Blog</a></li>
                                     <li ><a href="./category/geek.html">Geek</a></li>
                                     <li ><a href="./category/jeux.html">Jeux</a></li>
+                                    <li ><a href="./category/perso.html">Perso</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <ul>
     <li><a href="./category/blog.html">Blog</a></li>
     <li><a href="./category/geek.html">Geek</a></li>
     <li><a href="./category/jeux.html">Jeux</a></li>
+    <li><a href="./category/perso.html">Perso</a></li>
 </ul>
         <section id="extras" class="body">
                         <div class="blogroll">
