--- a/les-query-en-django.html
+++ b/les-query-en-django.html
@@ -25,6 +25,7 @@
                                                                                                     <li ><a href="./category/blog.html">Blog</a></li>
                                     <li class="active"><a href="./category/geek.html">Geek</a></li>
                                     <li ><a href="./category/jeux.html">Jeux</a></li>
+                                    <li ><a href="./category/perso.html">Perso</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
