--- a/le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html
+++ b/le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html
@@ -76,6 +76,7 @@ La monnaie etant un bon moyen de controler les citoyens d'un etat et d'imposer u
 Une monnaie sans etat ni structure centrale ne peut etre qu'a mon gout une bonne monnaie.</p>
 <p>Cet article n'engage que moi et j'espere qu'il est juste.</p>
 <p>Edit : mise a jour du 13 decembre : <a href="https://www.4chan.org/pass" title="On ne parle pas de 4chan d'habitude mais bon">4CHAN accepte les bitcoins</a> \o/</p>
+<p>Edit : Petit Tuto sur l'achat de bitcoin <a href="http://bussiere.github.com/Blog/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html" title="Suite">ici</a></p>
 <p>Pour faire un commentaire, inscrivez vous sur github et faite un fork / pull que je validerai.</p>
     </div><!-- /.entry-content -->
     
