--- a/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html
+++ b/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html
@@ -59,6 +59,7 @@ En gros il a un partenariat avec quelques banques dont le credit mutuel.</p>
 <li>ATTENTION :<ul>
 <li>Alors de un comme pour toute speculation, ne jouez que l'argent dont vous n'avez pas besoin. Sans compter les riques de pertes du a un <a href="https://www.google.fr/search?q=hack+bitcoin+hacker+news" title="Quelques exemples">hack</a>.</li>
 <li>De deux meme pour un virement sepa je vous conseille d'utiliser des cartes prépayés (<a href="https://www.pcsmastercard.com/" title="une carte prepayee">pcs</a>,<a href="http://www.trans-cash.fr/" title="une autre carte prepayee">transcash</a>). Le bitcoin etant utilisé par des hackers et des gens pas tres net.</li>
+<li>De meme que votre ordi/connexion a intéret a etre vraiment bien sécurisé vu que voler des bitcoins est tres facile sur un ordi troué.</li>
 </ul>
 </li>
 </ul>
