--- a/le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html
+++ b/le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html
@@ -68,7 +68,10 @@ Les banques qui peuvent vous virer parce que votre commerce <a href="http://www.
 <p>De plus <a href="http://en.wikipedia.org/wiki/Tor_%28anonymity_network%29" title="A utiliser">l'anonymat</a> de ce genre de transaction est aussi tres interessant en plus d'etre internationnal.</p>
 <p>Par contre il y a quelques defauts :
 Des sites se font fait <a href="http://it.slashdot.org/story/12/05/26/033242/hacked-bitcoin-financial-site-had-no-backups" title="bande d'amateur">hacker</a>, et ca reste une experience basé sur du <a href="http://fr.wikipedia.org/wiki/Confiance" title="Mouais">vent</a>. Meme si je rappel que tres peu de monnaie sont encore <a href="http://fr.wikipedia.org/wiki/%C3%89talon-or" title="Tout sur du vent">echangeable contre de l'or</a> de nos jours.
-La <a href="http://fr.wikipedia.org/wiki/Monnaie_de_n%C3%A9cessit%C3%A9" title="Comme quoi">confiance</a> etant la base de la <a href="http://fr.wikipedia.org/wiki/Monnaie_scripturale" title="Toujours du vent">monnaie scripturale</a> de nos jours.</p>
+La <a href="http://fr.wikipedia.org/wiki/Monnaie_de_n%C3%A9cessit%C3%A9" title="Comme quoi">confiance</a> etant la base de la <a href="http://fr.wikipedia.org/wiki/Monnaie_scripturale" title="Toujours du vent">monnaie scripturale</a> de nos jours.
+De maniere generale cela s'appelle la monnaie <a href="http://fr.wikipedia.org/wiki/Monnaie_fiduciaire" title="La confiance">fiduciaire</a> (systeme basé sur la confiance) tout depend de votre confiance dans le systeme.
+Bitcoin offre plus de libertés mais moins de garanties. Pas d'organisme centralisateur a qui se plaindre.</p>
+<p>De meme que votre ordi/connexion a intéret a etre vraiment bien sécurisé vu que voler des bitcoins est tres facile sur un ordi troué.</p>
 <p>De meme que si un jour un des algos de cryptages du bitcoin <a href="http://fr.wikipedia.org/wiki/Rivest_Shamir_Adleman#Attaques" title="Exemples">tombe</a> la monnaie tombe avec (notamment avec des <a href="http://fr.wikipedia.org/wiki/Calculateur_quantique" title="Pas demain la veille mais bon.">calculs quantiques</a>).
 Apres il faut savoir que l'emission de monnaie est un des pouvoirs <a href="http://www.wikiberal.org/wiki/Fonctions_r%C3%A9galiennes#Le_cas_particulier_de_la_monnaie" title="Frapper la monnaie = Pouvoir">regaliens</a> des etats et que 
 ceux ci sont tres <a href="http://en.wikipedia.org/wiki/E-gold#2007_indictment" title="On ne plaisante pas avec cela">chatouilleux</a> sur la question (il suffit de voir les <a href="http://fr.wikipedia.org/wiki/Faux-monnayage#Mesures_r.C3.A9pressives" title="Menaces sur l'ordre publique">peines des faux monnayeurs</a>).
@@ -77,6 +80,7 @@ Une monnaie sans etat ni structure centrale ne peut etre qu'a mon gout une bonne
 <p>Cet article n'engage que moi et j'espere qu'il est juste.</p>
 <p>Edit : mise a jour du 13 decembre : <a href="https://www.4chan.org/pass" title="On ne parle pas de 4chan d'habitude mais bon">4CHAN accepte les bitcoins</a> \o/</p>
 <p>Edit : Petit Tuto sur l'achat de bitcoin <a href="http://bussiere.github.com/Blog/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html" title="Suite">ici</a></p>
+<p>Edit : Merci a <a href="http://www.faskil.com/" title="Music is my first love ...">faskil</a> des remarques</p>
 <p>Pour faire un commentaire, inscrivez vous sur github et faite un fork / pull que je validerai.</p>
     </div><!-- /.entry-content -->
     
