--- a/archives.html
+++ b/archives.html
@@ -1,59 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <meta charset="utf-8">
         <title>Bussiere Blog</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="./theme/css/main.css" type="text/css" />
-                <link href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
+        <link rel="stylesheet" href="http://bussiere.github.com/Blog/theme/css/main.css">
+                <link href="http://bussiere.github.com/Blog/feeds\all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
                 
         <!--[if IE]>
-                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-        <!--[if lte IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="./css/ie.css"/>
-                <script src="./js/IE8.js" type="text/javascript"></script><![endif]-->
-
-        <!--[if lt IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="./css/ie6.css"/><![endif]-->
-
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href=".">Bussiere Blog </a></h1>
+                <h1><a href="http://bussiere.github.com/Blog/">Bussiere Blog </a></h1>
                 <nav><ul>
-                                                                                                    <li ><a href="./category/blog.html">Blog</a></li>
-                                    <li ><a href="./category/geek.html">Geek</a></li>
-                                    <li ><a href="./category/jeux.html">Jeux</a></li>
-                                    <li ><a href="./category/perso.html">Perso</a></li>
-                                </ul></nav>
+                                                                                    <li ><a href="http://bussiere.github.com/Blog/category/blog.html">Blog</a></li>
+                                    <li ><a href="http://bussiere.github.com/Blog/category/geek.html">Geek</a></li>
+                                    <li ><a href="http://bussiere.github.com/Blog/category/jeux.html">Jeux</a></li>
+                                    <li ><a href="http://bussiere.github.com/Blog/category/perso.html">Perso</a></li>
+                                                </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
 <h1>Archives for Bussiere Blog</h1>
 
 <dl>
+    <dt>jeu. 06 juin 2013</dt>
+    <dd><a href="http://bussiere.github.com/Blog/la-frange.html">La frange</a></dd>
     <dt>mer. 02 janvier 2013</dt>
-    <dd><a href="./le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html">Le bitcoin pour les nuls 2 le retour (Achat de Bitcoin)</a></dd>
-    <dt>ven. 28 dÚcembre 2012</dt>
-    <dd><a href="./petite-puterie-en-java.html">Petite Puterie en java</a></dd>
-    <dt>mer. 19 dÚcembre 2012</dt>
-    <dd><a href="./les-query-en-django.html">Les Query en django</a></dd>
-    <dt>mer. 19 dÚcembre 2012</dt>
-    <dd><a href="./resister.html">Resister</a></dd>
-    <dt>jeu. 13 dÚcembre 2012</dt>
-    <dd><a href="./fuit-moi-je-te-suit-suit-moi-je-te-fuit.html">Fuit moi je te suit, Suit moi je te fuit.</a></dd>
-    <dt>ven. 07 dÚcembre 2012</dt>
-    <dd><a href="./le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html">Le bitcoin pour les nuls (Mise a jour le 13 decembre)</a></dd>
-    <dt>mar. 04 dÚcembre 2012</dt>
-    <dd><a href="./planescapetorment.html">PlaneScapeTorment</a></dd>
-    <dt>lun. 03 dÚcembre 2012</dt>
-    <dd><a href="./competence.html">Competence</a></dd>
-    <dt>lun. 03 dÚcembre 2012</dt>
-    <dd><a href="./different-event-pour-lannee.html">Different Event pour l'annee</a></dd>
-    <dt>lun. 03 dÚcembre 2012</dt>
-    <dd><a href="./j-1.html">J-1</a></dd>
+    <dd><a href="http://bussiere.github.com/Blog/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html">Le bitcoin pour les nuls 2 le retour (Achat de Bitcoin)</a></dd>
+    <dt>ven. 28 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/petite-puterie-en-java.html">Petite Puterie en java</a></dd>
+    <dt>mer. 19 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/les-query-en-django.html">Les Query en django</a></dd>
+    <dt>mer. 19 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/resister.html">Resister</a></dd>
+    <dt>jeu. 13 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/fuit-moi-je-te-suit-suit-moi-je-te-fuit.html">Fuit moi je te suit, Suit moi je te fuit.</a></dd>
+    <dt>ven. 07 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html">Le bitcoin pour les nuls (Mise a jour le 13 decembre)</a></dd>
+    <dt>mar. 04 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/planescapetorment.html">PlaneScapeTorment</a></dd>
+    <dt>lun. 03 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/competence.html">Competence</a></dd>
+    <dt>lun. 03 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/different-event-pour-lannee.html">Different Event pour l'annee</a></dd>
+    <dt>lun. 03 décembre 2012</dt>
+    <dd><a href="http://bussiere.github.com/Blog/j-1.html">J-1</a></dd>
     <dt>lun. 26 novembre 2012</dt>
-    <dd><a href="./readme.html">Readme</a></dd>
+    <dd><a href="http://bussiere.github.com/Blog/readme.html">Readme</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -68,7 +63,7 @@
                                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://bussiere.github.com/Blog/feeds\all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
                                                     <li><a href="https://github.com/bussiere">Bussiere</a></li>
                                                 </ul>
