--- a/archives.html
+++ b/archives.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Bussiere Blog</title>
         <link rel="stylesheet" href="http://bussiere.github.com/Blog/theme/css/main.css">
-                <link href="http://bussiere.github.com/Blog/feeds\all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
+                <link href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
                 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,29 +25,29 @@
 <h1>Archives for Bussiere Blog</h1>
 
 <dl>
-    <dt>jeu. 06 juin 2013</dt>
+    <dt>Thu 06 June 2013</dt>
     <dd><a href="http://bussiere.github.com/Blog/la-frange.html">La frange</a></dd>
-    <dt>mer. 02 janvier 2013</dt>
+    <dt>Wed 02 January 2013</dt>
     <dd><a href="http://bussiere.github.com/Blog/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html">Le bitcoin pour les nuls 2 le retour (Achat de Bitcoin)</a></dd>
-    <dt>ven. 28 décembre 2012</dt>
+    <dt>Fri 28 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/petite-puterie-en-java.html">Petite Puterie en java</a></dd>
-    <dt>mer. 19 décembre 2012</dt>
+    <dt>Wed 19 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/les-query-en-django.html">Les Query en django</a></dd>
-    <dt>mer. 19 décembre 2012</dt>
+    <dt>Wed 19 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/resister.html">Resister</a></dd>
-    <dt>jeu. 13 décembre 2012</dt>
+    <dt>Thu 13 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/fuit-moi-je-te-suit-suit-moi-je-te-fuit.html">Fuit moi je te suit, Suit moi je te fuit.</a></dd>
-    <dt>ven. 07 décembre 2012</dt>
+    <dt>Fri 07 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/le-bitcoin-pour-les-nuls-mise-a-jour-le-13-decembre.html">Le bitcoin pour les nuls (Mise a jour le 13 decembre)</a></dd>
-    <dt>mar. 04 décembre 2012</dt>
+    <dt>Tue 04 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/planescapetorment.html">PlaneScapeTorment</a></dd>
-    <dt>lun. 03 décembre 2012</dt>
+    <dt>Mon 03 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/competence.html">Competence</a></dd>
-    <dt>lun. 03 décembre 2012</dt>
+    <dt>Mon 03 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/different-event-pour-lannee.html">Different Event pour l'annee</a></dd>
-    <dt>lun. 03 décembre 2012</dt>
+    <dt>Mon 03 December 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/j-1.html">J-1</a></dd>
-    <dt>lun. 26 novembre 2012</dt>
+    <dt>Mon 26 November 2012</dt>
     <dd><a href="http://bussiere.github.com/Blog/readme.html">Readme</a></dd>
 </dl>
 </section>
@@ -63,7 +63,7 @@
                                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://bussiere.github.com/Blog/feeds\all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
                                                     <li><a href="https://github.com/bussiere">Bussiere</a></li>
                                                 </ul>
