--- a/categories.html
+++ b/categories.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Bussiere Blog</title>
         <link rel="stylesheet" href="http://bussiere.github.com/Blog/theme/css/main.css">
-                <link href="http://bussiere.github.com/Blog/feeds\all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
+                <link href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
                 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -39,7 +39,7 @@
                                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://bussiere.github.com/Blog/feeds\all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
                                                     <li><a href="https://github.com/bussiere">Bussiere</a></li>
                                                 </ul>
