--- a/la-frange.html
+++ b/la-frange.html
@@ -47,7 +47,7 @@ Là ou j'ai appris le shibari , que j'ai rencontré des gens que je frequente en
 <p><a href="https://www.facebook.com/events/264686893672355/?fref=ts" title="Page Fb de l evenement">Le lien de l'evenement</a></p>
 <p><a href="https://www.facebook.com/LaFrangebar" title="Page fb La frange">La page de la frange</a></p>
 <p><a href="http://goo.gl/maps/1FOVy" title="Google map de la frange">L adresse de la frange</a></p>
-<p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/frange2.jpg" title="Grande Version"><img alt="Asuka Swimsuit" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/frange2_thumb.jpg" /></a> </p>
+<p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/frange2.jpg" title="Grande Version"><img alt="Serveuses" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/frange2_thumb.jpg" /></a> </p>
     </div><!-- /.entry-content -->
     
   </article>
