--- a/revenez-monsieur-phil-fish.html
+++ b/revenez-monsieur-phil-fish.html
@@ -45,6 +45,7 @@
 <p>La chaine Nolife en france a fait une emission speciale sur votre et le signe que fez est un bon jeu est que les joueurs prennent plaisir a en discuter entre eux comme une epopée que l'on aurait vécu.</p>
 <p>Mon ethique de vie pour etre un peu particulier est que tant que les gens que j'estiment , m'estiment aussi les autres peuvent aller se faire voir profondément.</p>
 <p>S'il vous plait, revenez le monde du jeu vidéo manque de gens comme vous.</p>
+<p><a href="http://bussiere.github.io/Blog/static/images/fezagain.jpg" title="grande version"><img alt="Asuka Swimsuit" src="http://bussiere.github.io/Blog/static/images/fezagain.jpg" /></a> </p>
 <p>Bussiere</p>
   </div><!-- /.entry-content -->
 </section>
