--- a/categories.html
+++ b/categories.html
@@ -20,7 +20,8 @@
     <li><a href="http://bussiere.github.com/Blog/category/jeux.html">Jeux</a></li>
     <li><a href="http://bussiere.github.com/Blog/category/perso.html">Perso</a></li>
 </ul>
-        <footer id="contentinfo" class="body">
+                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
