--- a/fuit-moi-je-te-suit-suit-moi-je-te-fuit.html
+++ b/fuit-moi-je-te-suit-suit-moi-je-te-fuit.html
@@ -45,7 +45,8 @@ Ce genre de comportement absurde, pour la personne que je suis qui aime quand me
 <p>Pour faire un commentaire, inscrivez vous sur github et faite un fork / pull que je validerai.</p>
   </div><!-- /.entry-content -->
 </section>
-        <footer id="contentinfo" class="body">
+                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
