--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ Et une <a href="http://anadore.fr/" title="Des purs aussi">connaissance</a> qui 
             <a href="http://bussiere.github.com/Blog/index2.html">&raquo;</a>
     </p>
 </section><!-- /#content -->
-        <footer id="contentinfo" class="body">
+                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
