--- a/j-1.html
+++ b/j-1.html
@@ -43,7 +43,8 @@ Notamment quand beaucoup de choses changent autour de vous.</p>
 <p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/asuka_swimsuit.jpg" title="Grande Version"><img alt="Asuka Swimsuit" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/asuka_swimsuit_thumb.jpg" /></a> </p>
   </div><!-- /.entry-content -->
 </section>
-        <footer id="contentinfo" class="body">
+                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
