--- a/la-frange.html
+++ b/la-frange.html
@@ -47,7 +47,8 @@ Là ou j'ai appris le shibari , que j'ai rencontré des gens que je frequente en
 <p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/frange2.jpg" title="Grande Version"><img alt="Serveuses" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/frange2_thumb.jpg" /></a> </p>
   </div><!-- /.entry-content -->
 </section>
-        <footer id="contentinfo" class="body">
+                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
