--- a/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html
+++ b/le-bitcoin-pour-les-nuls-2-le-retour-achat-de-bitcoin.html
@@ -60,7 +60,8 @@ En gros il a un partenariat avec quelques banques dont le credit mutuel.</p>
 <p>Pour faire un commentaire, inscrivez vous sur github et faite un fork / pull que je validerai.</p>
   </div><!-- /.entry-content -->
 </section>
-        <footer id="contentinfo" class="body">
+                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
