--- a/competence.html
+++ b/competence.html
@@ -7,7 +7,10 @@
                                 <link href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
                         <link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Bussiere Blog RSS Feed" />
                         <link href="http://bussiere.github.com/Blog/feeds\perso.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Categories Atom Feed" />
-                                        </head>
+                                        <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+                        
+
+</head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
@@ -89,8 +92,8 @@
 Et techniquement n'importe avec un peu de temps de la doc et un peu de pratique je peux apprendre.</p>
   </div><!-- /.entry-content -->
 </section>
-                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
-        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
+        
+        <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
