--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,10 @@
                                 <link href="http://bussiere.github.com/Blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Atom Feed" />
                         <link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Bussiere Blog RSS Feed" />
                         <link href="http://bussiere.github.com/Blog/feeds\blog.atom.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog Categories Atom Feed" />
-                                        </head>
+                                        <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
+                        
+
+</head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
@@ -42,8 +45,8 @@
 <p><a href="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_00.jpg" title="Grande Version"><img alt="Vampirette" src="http://raw.github.com/bussiere/Blog/gh-pages/static/images/_00_thumb.jpg" /></a> </p>
   </div><!-- /.entry-content -->
 </section>
-                <link rel="stylesheet" type="text/css" href="http://bussiere.github.com/Blog/theme/css/main.css" />
-        <link href="http://bussiere.github.com/Blog/" type="application/atom+xml" rel="alternate" title="Bussiere Blog ATOM Feed" /><link href="http://bussiere.github.com/Blog/feeds/all.rss.xml" type="application/atom+xml" rel="alternate" title="Bussiere Blog RSS Feed" /><footer id="contentinfo" class="body">
+        
+        <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
